# Phyto2DEngine

./: .gitignore  CMakeLists.txt
3rd/glad/: CMakeLists.txt
3rd/glad/include/glad/: glad.h
3rd/glad/src/: glad.c
3rd/stb/: CMakeLists.txt
inc/CGLSL/: Parser.hpp  ShaderSource.hpp
inc/CGLSL/Internal/: PCRE.hpp
inc/Engine/: IndexBuffer.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp  Window.hpp
inc/Engine/Primitives/: ColoredPoint.hpp  Grid.hpp  Quad.hpp  Triangle.hpp
inc/IO/: IO.hpp
res/shaders/: default.cglsl  sprite.cglsl
src/CGLSL/: Parser.cpp
src/Engine/: IndexBuffer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  Window.cpp
src/Engine/Primitives/: Grid.cpp  Quad.cpp  Triangle.cpp
src/IO/: IO.cpp
src/TestGame/: Game.cpp  Game.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  main.cpp
